syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "chat";

package forum;

service Share {
    rpc shareMessage(SharedMessage) returns (google.protobuf.Empty);
}

message SharedMessage {
    string fromUser = 1;
    EndPoint originServer = 2;
    string txtMsg = 3;
}

message EndPoint {
    string ip = 1;
    int32 port = 2;
}

